# Tokyo-Trip-Assistant

./: .dockerignore  .env.example  DEPLOYMENT.md  DEVELOPMENT_PLAN.md  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  railway.toml  start.sh  ui.py
.claude/: settings.local.json
.github/workflows/: deploy.yml
app/: main.py
app/chains/: conversation_chain.py
app/core/: config.py  logger.py
app/data/: tokyo_guide.json
app/prompts/: sightseeing.yaml
app/routes/: chat.py
app/services/: weather.py
app/utils/: prompt_loader.py
app/vectorstore/: loader.py  search.py
tests/: test_chat_flow.py  test_health.py
