[project]
name = "tokyo-trip-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.117.1",
    "httpx>=0.28.1",
    "langchain>=0.3.27",
    "langgraph>=0.6.7",
    "openai>=1.108.2",
    "pinecone>=7.3.0",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "streamlit>=1.28.0",
    "tiktoken>=0.8.0",
    "uvicorn>=0.37.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
]
